# mhcpred

./: .flake8  .gitignore  README.md  pyproject.toml  settings.toml
data/: allele_sequences.csv  readme.md
mhcpred/: class1_binary_nn.py  class1_binary_predictor.py  config.py  data.py  data_dependent_weights_initialization.py  exploration.py  hyperparameters.py  mhcflurry_benchmark.py
notebooks/: EDA.ipynb  metrics.ipynb
scripts/: launch_training.py  launch_training_inference.py  launch_training_predictor.py  metrics.py  mhcflurry_benchmark.py
src/mhcpred/: __init__.py  class1_binary_nn.py  data.py
