[project]
name = "mhcpred"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nicolas Brosse", email = "nbrosse@gmail.com" }
]
dependencies = [
    "mhcflurry>=2.1.2",
    "dynaconf>=3.2.6",
    "notebook>=7.2.1",
]
readme = "README.md"
requires-python = "== 3.9.*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff]
line-length = 88

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mhcpred"]
